; ModuleID = '/home/carl/AnghaBench/kphp-kdb/msg-search/extr_msg-search-engine.c_process_text.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/msg-search/extr_msg-search-engine.c_process_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.anon = type { i64, [8 x i8] }

@Qw = common dso_local global i32 0, align 4
@is_letter = common dso_local global i32* null, align 8
@MaxQw = common dso_local global i32 0, align 4
@MAX_QUERY_WORDS = common dso_local global i32 0, align 4
@Q = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @process_text(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %union.anon, align 8
  store i8* %0, i8** %3, align 8
  store i32 0, i32* @Qw, align 4
  br label %7

7:                                                ; preds = %15, %1
  %8 = load i32*, i32** @is_letter, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = load i8, i8* %9, align 1
  %11 = zext i8 %10 to i64
  %12 = getelementptr inbounds i32, i32* %8, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = icmp eq i32 %13, 32
  br i1 %14, label %15, label %18

15:                                               ; preds = %7
  %16 = load i8*, i8** %3, align 8
  %17 = getelementptr inbounds i8, i8* %16, i32 1
  store i8* %17, i8** %3, align 8
  br label %7

18:                                               ; preds = %7
  br label %19

19:                                               ; preds = %102, %95, %18
  %20 = load i8*, i8** %3, align 8
  %21 = load i8, i8* %20, align 1
  %22 = icmp ne i8 %21, 0
  br i1 %22, label %23, label %110

23:                                               ; preds = %19
  %24 = load i8*, i8** %3, align 8
  store i8* %24, i8** %4, align 8
  br label %25

25:                                               ; preds = %42, %23
  %26 = load i32*, i32** @is_letter, align 8
  %27 = load i8*, i8** %3, align 8
  %28 = load i8, i8* %27, align 1
  %29 = zext i8 %28 to i64
  %30 = getelementptr inbounds i32, i32* %26, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = icmp sgt i32 %31, 32
  br i1 %32, label %33, label %45

33:                                               ; preds = %25
  %34 = load i32*, i32** @is_letter, align 8
  %35 = load i8*, i8** %3, align 8
  %36 = load i8, i8* %35, align 1
  %37 = zext i8 %36 to i64
  %38 = getelementptr inbounds i32, i32* %34, i64 %37
  %39 = load i32, i32* %38, align 4
  %40 = trunc i32 %39 to i8
  %41 = load i8*, i8** %3, align 8
  store i8 %40, i8* %41, align 1
  br label %42

42:                                               ; preds = %33
  %43 = load i8*, i8** %3, align 8
  %44 = getelementptr inbounds i8, i8* %43, i32 1
  store i8* %44, i8** %3, align 8
  br label %25

45:                                               ; preds = %25
  %46 = load i8*, i8** %4, align 8
  %47 = load i8*, i8** %3, align 8
  %48 = load i8*, i8** %4, align 8
  %49 = ptrtoint i8* %47 to i64
  %50 = ptrtoint i8* %48 to i64
  %51 = sub i64 %49, %50
  %52 = trunc i64 %51 to i32
  %53 = bitcast %union.anon* %6 to [16 x i8]*
  %54 = getelementptr inbounds [16 x i8], [16 x i8]* %53, i64 0, i64 0
  %55 = call i32 @md5(i8* %46, i32 %52, i8* %54)
  br label %56

56:                                               ; preds = %65, %45
  %57 = load i32*, i32** @is_letter, align 8
  %58 = load i8*, i8** %3, align 8
  %59 = load i8, i8* %58, align 1
  %60 = zext i8 %59 to i64
  %61 = getelementptr inbounds i32, i32* %57, i64 %60
  %62 = load i32, i32* %61, align 4
  %63 = icmp eq i32 %62, 32
  br i1 %63, label %64, label %68

64:                                               ; preds = %56
  br label %65

65:                                               ; preds = %64
  %66 = load i8*, i8** %3, align 8
  %67 = getelementptr inbounds i8, i8* %66, i32 1
  store i8* %67, i8** %3, align 8
  br label %56

68:                                               ; preds = %56
  %69 = load i32, i32* @MaxQw, align 4
  %70 = load i32, i32* @MAX_QUERY_WORDS, align 4
  %71 = icmp sle i32 %69, %70
  br i1 %71, label %72, label %97

72:                                               ; preds = %68
  store i32 0, i32* %5, align 4
  br label %73

73:                                               ; preds = %88, %72
  %74 = load i32, i32* %5, align 4
  %75 = load i32, i32* @Qw, align 4
  %76 = icmp slt i32 %74, %75
  br i1 %76, label %77, label %91

77:                                               ; preds = %73
  %78 = load i64*, i64** @Q, align 8
  %79 = load i32, i32* %5, align 4
  %80 = sext i32 %79 to i64
  %81 = getelementptr inbounds i64, i64* %78, i64 %80
  %82 = load i64, i64* %81, align 8
  %83 = bitcast %union.anon* %6 to i64*
  %84 = load i64, i64* %83, align 8
  %85 = icmp eq i64 %82, %84
  br i1 %85, label %86, label %87

86:                                               ; preds = %77
  br label %91

87:                                               ; preds = %77
  br label %88

88:                                               ; preds = %87
  %89 = load i32, i32* %5, align 4
  %90 = add nsw i32 %89, 1
  store i32 %90, i32* %5, align 4
  br label %73

91:                                               ; preds = %86, %73
  %92 = load i32, i32* %5, align 4
  %93 = load i32, i32* @Qw, align 4
  %94 = icmp slt i32 %92, %93
  br i1 %94, label %95, label %96

95:                                               ; preds = %91
  br label %19

96:                                               ; preds = %91
  br label %97

97:                                               ; preds = %96, %68
  %98 = load i32, i32* @Qw, align 4
  %99 = load i32, i32* @MaxQw, align 4
  %100 = icmp eq i32 %98, %99
  br i1 %100, label %101, label %102

101:                                              ; preds = %97
  store i32 -1, i32* %2, align 4
  br label %112

102:                                              ; preds = %97
  %103 = bitcast %union.anon* %6 to i64*
  %104 = load i64, i64* %103, align 8
  %105 = load i64*, i64** @Q, align 8
  %106 = load i32, i32* @Qw, align 4
  %107 = add nsw i32 %106, 1
  store i32 %107, i32* @Qw, align 4
  %108 = sext i32 %106 to i64
  %109 = getelementptr inbounds i64, i64* %105, i64 %108
  store i64 %104, i64* %109, align 8
  br label %19

110:                                              ; preds = %19
  %111 = load i32, i32* @Qw, align 4
  store i32 %111, i32* %2, align 4
  br label %112

112:                                              ; preds = %110, %101
  %113 = load i32, i32* %2, align 4
  ret i32 %113
}

declare dso_local i32 @md5(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
